# unnatural-selection

./: .gitman.yml  CMakeLists.txt
builds/web/: unnatural-selection.html  unnatural-selection.js
data/geo/: Shotty.mtl  gun.blend  gun.blend1  gun.mtl  lazer.mtl  node.blend  node.blend1  node.mtl  node_damage.blend  node_damage_2.mtl  node_damaged_0.mtl  spawner.blend  spawner.blend1  spawner.mtl
data/shader/: animated_sprite.fs  baddies.fs  basic_font.fs  basic_gui.fs  basic_gui.vs  billboard.vs  gpu_particle.fs  gpu_particle.vs  level.fs  level.vs  model.fs  particle.fs  particle.vs  test_uv.fs
data/tex/: Smoke.json  Sprite-0003.aseprite  UI.psd  Wall_1.aseprite  Wall_2.aseprite  Wall_3.aseprite  armor.aseprite  chunks.json  floor_1.aseprite  gunFire.aseprite  gun_carbine.aseprite  gun_carbine.json  gun_laser.aseprite  gun_laser.json  gun_shotty.aseprite  gun_shotty.json  guns.aseprite  particles.json  screen.psd  smoke.json  virus_1.aseprite  virus_1.json  virus_2.aseprite  virus_2.json  virus_3.aseprite  virus_3.json  virus_4.json  virus_5.json
include/: constants.hpp  level.hpp  mechanics.hpp  particles.hpp  renderer.hpp  state.hpp
src/: main.cpp
